# AtelierProg

./: CMakeLists.txt  README.md  main.cpp  main_julien.cpp  main_mathis.cpp  main_network.cpp  main_pierre.cpp
API/: Console.cpp  Console.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  Logger.cpp  Logger.h  MouseHandler.cpp  MouseHandler.h  Scene.cpp  Scene.h  SceneLogic.cpp  SceneLogic.h  SceneManager.cpp  SceneManager.h  SceneState.h  SceneView.cpp  SceneView.h  Window.cpp  Window.h  WindowManager.h  tools.cpp  tools.h
MapEditor/: MapEditor.cpp
Network/: Bridge.cpp  Bridge.h  Client.cpp  Client.h  Server.cpp  Server.h  cross_socket.cpp  cross_socket.h
PierreMathis/: SceneButton.cpp  SceneButton.h  main_pierremathis.cpp
Sandbox/: A.cpp  A.h  AManager.cpp  AManager.h  Singleton.cpp  Singleton.h
Tests/: SceneConsole.cpp  SceneConsole.h  SceneMenu.cpp  SceneMenu.h
Windows/: Collision.cpp  Collision.h  Components.h  ECS.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  button.cpp  button.h  window.cpp
Windows/ECS/: Animation.h  ClickableComponent.cpp  ClickableComponent.h  ColliderComponent.h  Components.h  ECS.h  KeyboardController.h  MouseComponent.h  MouseController.cpp  MouseController.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
Windows/MapEditor/: MapEditor.cpp  MapEditor.h
assets/: map_16x16.map
options/: Options.txt  options.cpp  options.h  parser.cpp  parser.h
tutorial/: EventHandling.cpp
